day12-ingress-controllers-in-depth/manifests/kong-rate-limit-plugin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kong-ratelimited
  annotations:
    konghq.com/plugins: hello-rate-limit
spec:
  ingressClassName: kong
  rules:
    - host: icd-kong-ratelimit.zero2hero.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: {name: hello-app-svc, port: {number: 80}}
